mobile aside z-index bug fixed

--- a/components/Aside/Aside.css
+++ b/components/Aside/Aside.css
@@ -1,6 +1,6 @@
 aside {
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   top: 132px;
   left: 0;
   height: 100%;
